# Mastermind

./: main.py  pyproject.toml
