[tool.poetry]
name = "repl_python3_Mastermind"
version = "0.1.0"
description = ""
authors = ["nikadari <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
